--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>React App</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div class="root"></div>
+    <div class="root">
+      <h1>ZapRecall</h1>
+      <p>Pergunta 1</p>
+    </div>
   </body>
 </html>
